2001-06-28  Hans Petter Jansson  <hpj@ximian.com>

	* replace.pl.in (xst_replace_printcap_print_stanza): Implement.
	  (xst_replace_printcap_print_option): Implement.
	  (xst_replace_printcap_add_stanza): Implement.
	  (xst_replace_printcap_add_option_slot): Implement.
	  (xst_replace_printcap_remove_stanza_from_buf): Implement.
	  (xst_replace_printcap_remove_option_slot): Implement.
	  (xst_replace_printcap_remove_printer): Implement.
	  (xst_replace_printcap): Add stanzas and options that are referred
	  to but not present.

2001-06-27  Hans Petter Jansson  <hpj@ximian.com>

	* replace.pl.in (xst_replace_cap): Comment out for now, we've got
	  something better up our sleeves.
	  (xst_replace_printcap_buffer_load): Implement.
	  (xst_replace_printcap_buffer_save): Implement.
	  (xst_replace_printcap_get_next_stanza): Implement.
	  (xst_replace_printcap_get_next_option): Implement.
	  (xst_replace_printcap_parse_stanza): Implement.
	  (xst_replace_printcap_parse_option): Implement.
	  (xst_replace_printcap_find_stanza): Implement.
	  (xst_replace_printcap_find_option): Implement.
	  (xst_replace_printcap): Implement.

2001-06-27  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_read_file): Code readability.
	(xst_xml_read_stdin): same, and wait for magic string to stop
	reading.
	(xst_xml_scan): readability.

	* general.pl.in (xst_run_directive): Print the request end string
	after every directive. This doesn't happen for the "end" directive,
	which terminates the process.

	* xml.pl.in (xst_xml_print_request_end): Print a request end string,
	encapsulated in an XML comment. This is for the frontends to know when
	the backend is ready for new input.

	* memory-conf.in (xml_print): No prototypes, thank-you. Read
	http://www.perl.com/pub/language/misc/fmproto.html for enlightening.
	(xml_print): Use xst_xml_print_{begin,end}.

	* x.pl.in: same. Prototypes were invented to allow people to