@@ -36,7 +36,7 @@ require "___scriptsdir___/xml.pl";
 $name = "package";
 $version = "0.0.1";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
-              "mandrake-7.2", "suse-7.0");
+              "mandrake-7.2", "suse-7.0", "turbolinux-7.0");
 
 $description =<<"end_of_description;";
 List available packages at the system only.  Use the available package update
@@ -130,6 +130,7 @@ sub get_package
     "mandrake" => "$cmd_map{rpm}",
     "suse"     => "$cmd_map{rpm}",
     "debian"   => "$cmd_map{deb}"
+    "turbolinux" => "$cmd_map{rpm}",
   );
 
   ($distributor) = split /-/, $xst_dist;
