@@ -53,7 +53,7 @@ require "___scriptsdir___/share.pl";
 $name = "shares";
 $version = "0.1.0";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
-              "redhat-7.1", "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0");
+              "redhat-7.1", "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0", "turbolinux-7.0");
 
 #              "freebsd-4", "freebsd-5");
 
@@ -76,7 +76,8 @@ $platmap =
   "mandrake-7.2" => "redhat-7.0",
   "suse-7.0"     => "redhat-6.2",
   "freebsd-4"    => "freebsd-4",
-  "freebsd-5"    => "freebsd-4"
+  "freebsd-5"    => "freebsd-4",
+  "turbolinux-7.0"   => "redhat-7.0"
 };
 
 $filemap =
